src/scss/_sidebar.scss
.widget {
  font-size: var(--fs-widget);

  &.widget_block .wp-block-heading {
    &:is(h1) {
      font-size: 1.6em;
    }

    &:is(h2) {
      font-size: 1.5em;
    }

    &:is(h3) {
      font-size: 1.4em;
    }

    &:is(h4) {
      font-size: 1.3em;
    }

    &:is(h5) {
      font-size: 1.2em;
    }

    &:is(h6) {
      font-size: 1.1em;
    }
  }

  .wp-block-list {
    list-style: initial;
    padding-left: 1.05em;
  }

  .widgettitle {
    font-size: 1.4em; // h3
    margin-bottom: .625rem;
  }

  &:where(:not(:last-child)) {
    margin-bottom: var(--layout-widget-spacing);

    &:where(:has(.wp-block-heading)) {
      margin-bottom: .6rem;
    }
  }

  .wp-block-separator {
    margin: 0;
  }
}

.widget_meta {
  ul {
    list-style-type: disc;
    padding-left: 1.05em;
  }

  a:where(:not(.button, .wp-element-button)) {
    color: var(--widget-link-color);

    &:hover {
      color: var(--widget-link-color-hover);
    }
  }
}

.has-sidebar {
  --layout-spacing-horizontal: #{get_clamp(20, 48, 480, $full-width)};
  --layout-spacing-horizontal-small: #{get_clamp(10, 20, 320, 400)};

  &:where(:not(.has-sidebar-right)) {
    .main__wrapper {
      order: 1;

      @include bp(desktop) {
        order: 2;
      }

      .padding-left {
        @include bp(desktop) {
          order: 2;
          padding-left: var(--sidebar-gap, 3rem);
        }
      }
    }
  }

  &.has-sidebar-right {
    .main {
      grid-template-columns: 1fr calc(var(--sidebar-width) + var(--layout-spacing-horizontal));
      grid-template-areas: 'content sidebar';
    }

    .main__wrapper {
      .padding-right {
        @include bp(desktop) {
          padding-right: var(--sidebar-gap, 3rem);
        }
      }
    }

    .fictioneer-sidebar._layout {
      .fictioneer-sidebar__wrapper {
        @include bp(desktop) {
          padding: var(--layout-spacing-vertical) var(--layout-spacing-horizontal) var(--layout-spacing-vertical) 0;
        }
      }
    }
  }

  .fictioneer-sidebar__wrapper._layout {
    padding: var(--layout-spacing-vertical) var(--layout-spacing-horizontal-small);
    min-width: calc(var(--sidebar-width) + var(--layout-spacing-horizontal-small));

    @include bp(400px) {
      padding: var(--layout-spacing-vertical) var(--layout-spacing-horizontal);
      min-width: calc(var(--sidebar-width) + var(--layout-spacing-horizontal));
    }

    @include bp(desktop) {
      padding: var(--layout-spacing-vertical) 0 var(--layout-spacing-vertical) var(--layout-spacing-horizontal);
    }
  }

  .main {
    display: flex;
    flex-direction: column;

    @include bp(desktop) {
      display: grid;
      grid-template-columns: calc(var(--sidebar-width) + var(--layout-spacing-horizontal)) 1fr;
      grid-template-areas: 'sidebar content';
      min-width: calc(494px + var(--sidebar-width));
    }

    &__wrapper {
      grid-area: content;
      flex: 1 1 auto;
      order: 1;
    }
  }

  .current-reading::after,
  .selected-paragraph::after {
    border-radius: var(--layout-border-radius-small);

    @include bp(desktop) {
      max-width: calc(100% + var(--layout-spacing-horizontal));
    }
  }

  .current-bookmark::before {
    @include bp(desktop) {
      max-width: calc(100% + var(--layout-spacing-horizontal));
    }
  }
}

.fictioneer-sidebar,
.elementor-widget-sidebar {
  position: relative;
  z-index: 1;
  flex: 1 1 100%;

  &._layout {
    @include bp(desktop) {
      padding-top: var(--page-inset-top);
    }
  }

  &__wrapper,
  .elementor-widget-container {
    container-type: inline-size;
  }
}

.fictioneer-sidebar._layout,
.elementor-widget-sidebar {
  .widget {
    --block-latest-posts-title-font-size: 1.1em;
    color: var(--fg-700);
  }

  .wp-block-latest-posts {
    @include bp(desktop) {
      --this-row-gap: 1.25rem;
      --this-col-gap: 1.25rem;
    }
  }
}

.fictioneer-sidebar._layout {
  grid-area: sidebar;
  order: 2;

  &::before {
    content: '';
    display: block;
    margin: var(--sidebar-mobile-divider-margin);
    border-top: var(--sidebar-mobile-divider);

    @include bp(desktop) {
      content: none;
    }
  }

  &._hide-on-mobile {
    @media screen and (max-width: 1023.9px) {
      display: none;
      content-visibility: hidden;
    }
  }
}

